Fri May 28 11:43:41 2004  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_action_language.c: Apply patch from
	  leonard.michlmayr@ap.univie.ac.at (Leonard Michlmayr),
	  to make the language dialog at most 600 pixels tall to make it
	  look prettier.  Fixes #142175

Fri May 28 11:36:46 2004  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Fix for #141497, that is the last_x_failed is
	  properly reset, we only restart 3 times and we allow those
	  to happen in a much longer timeframe (5 minutes), which is OK
	  since we reset on successful remanage rather then just based
	  on time.

Fri May 28 11:08:51 2004  George Lebl <jirka@5z.com>

	* configure.in: eek, evil we had GETTEXT_PACKAGE set to
	  gdm-2.4, but we want gdm-2.6 nowdays

	* daemon/gdm.c, daemon/misc.c: fix the ConsoleCannotHandle key
	  and cache it as soon as we can and also set
	  UNSAFE_TO_TRANSLATE=yes when forking something and console
	  can't handle the language

	* daemon/server.c: fix a minor fd leak and print a C locale
	  (don't want to translate this) error to the X log when the
	  X server cannot be exec'ed.

	* utils/gdmopen.c, utils/gdmtranslate.c, config/XKeepsCrashing:
	  Listen to UNSAFE_TO_TRANSLATE, since running shells in login
	  mode may modify the locale so we must force it to "C" where
	  we can if it is really unsafe (language in ConsoleCannotHandle)

Thu May 27 13:42:39 2004  George Lebl <jirka@5z.com>

	* gui/modules/dwellmouselistener.c, gui/modules/keymouselistener.c:
	  The screen code was wankered, it wanted HAVE_GTK_MULTIHEAD to be
	  defined to work properly and otherwise it confused bonobo which
	  is completely moronic (I mean bonobo is moronic) by using slightly
	  different (but perfectly legal) DISPLAY env var.

Wed May 26 18:23:14 2004  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm.[ch], daemon/misc.[ch],
	  daemon/server.c, daemon/slave.c, daemon/verify-pam.c, docs/C/gdm.xml,