@@ -1,3 +1,10 @@
+Fri May 28 12:01:02 2004  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c, gui/greeter/greeter_item_ulist.c: Cut after
+	  the comma in the gecos field if there is more then one comma
+	  as then it's probably ugly arguments and not the name.  Fixes
+	  #142274
+
 Fri May 28 11:43:41 2004  George Lebl <jirka@5z.com>
 
 	* gui/greeter/greeter_action_language.c: Apply patch from
